# saint_jerome

./: .env.example  .gitignore  discloud.config  main.py  pyproject.toml  requirements.txt
data/: sample_passages.json
migrations/postgres/: 001_create_bible_schema.sql
migrations/sqlite/: 001_create_bible_schema.sql
scripts/: import_biblia_db.py  run_sample.py
src/saint_jerome/: __init__.py
src/saint_jerome/app/services/: bible_service.py  guild_liturgy_service.py  liturgy_service.py
src/saint_jerome/bot/: __init__.py  client.py  main.py
src/saint_jerome/bot/cogs/: bible_cog.py  liturgy_cog.py
src/saint_jerome/bot/commands/: __init__.py  liturgia.py  versiculo.py
src/saint_jerome/bot/views/: __init__.py  pagination.py
src/saint_jerome/config/: settings.py
src/saint_jerome/domain/: liturgy.py  models.py  parser.py  reference.py  text_normalization.py
src/saint_jerome/infra/: database.py  startup_bootstrap.py
src/saint_jerome/infra/clients/: __init__.py  liturgy_api.py
src/saint_jerome/infra/importers/: __init__.py  biblia_db.py
src/saint_jerome/infra/loaders/: __init__.py  json_loader.py
src/saint_jerome/infra/repositories/: guild_liturgy_repository.py  memory_repository.py  postgres_bible_repository.py  postgres_guild_liturgy_repository.py  sqlite_repository.py
tests/: test_guild_liturgy_service.py  test_import_biblia_db.py  test_liturgy_embeds.py  test_liturgy_model.py  test_reference_parser.py  test_settings.py
